# beatbridge

./: .gitignore  .ocamlformat  README.md  beatbridge.opam  dune-project  flake.nix  gleam.toml  manifest.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 04b4sqqvgw0s1bgfsz4f07n6ak9n3j71-source  070516swcyihxvq98npx0n99rgmcjng3-source  0hxp5nbfhjbhnbajgb13i6krb8z9nvf7-source  1y14wkgb3jv2k7320zv9yc74nrkavw4f-source  2aq2988wcw9idpzsp011ix6sprfbcsv6-source  2wqsszx5m3fwvnwlr87xvkbgii5lkajj-source  3fsgp31sqcbqhp1mf3fs5rb82zchq2m7-source  4hic1yxcfv4y1h6r9qnv1f8zsd9ss4qx-source  78w8wvvbmjzrdjamnsvk18qmz2r530aa-source  8c3hm2gcb6sc6maadk1l60z59p168rc7-source  8hdb52khsa36il0lnc4y18a5g5a1ql9h-source  9151n96hlk4dmpk1hcrl1p5brrnf7ngs-source  9g6ng3xliyilrx88ly95kpbdkfwh5sjr-source  9z4cral6dchlbcpcq76ilnw9vppmvi7c-source  d6yvjv6r9dshca0iwy1bylzmk46irf31-source  f3qvvsc792cynv5kcgms28md6py5aaf7-source  fj2hkfmz1pallvm2qdbhn8d47qv7jn77-source  i160kmbccrwm9lyww1523r2pp445c5xa-source  iq9k6miwawh1l3vdsb082zwk4swm24b9-source  izrrrbzycbz65q4v53v08jxzjnmcn16k-source  m955h68xjw3ng6ibif18djh5q52xgv37-source  mlnmk2q7wfqfq4lv51i8mc3gl0f8gqlz-source  na28dnihairk7nsf8n9z55hm41ik2hcw-source  pvjpfn2i6g730amjvs1b0i8wifbfd4pd-source  q72lsrs1ys4vw0cjbmsxs8vmavisdcd3-source  wrr6a09ys6aih3grlxjvm9jq94g5g3rp-source  x6iirc0p840yhp210z2dq8480dajy1q4-source  yvyp26dp00ljrlw7jzsy3mf5kgm6angz-source  (+1 more)
_build/: .db  .digest-db  log
_build/default/: beatbridge.opam  (+1 more)
src/: beatbridge.gleam
(+35 files in other folders)
